Development
	Add --forcecache command line flag, forces cache usage when playing streaming media
	Add --cache command line option, size of cache in Kbytes
	Remember window size when showing/hiding playlist
	When double clicking, only call fullscreen if video present
	Don't let the media_label get to large when playing audio streams
	Fix: controls comeback even if hidden after fullscreen being activated/deactivated
	Move some direct GTK calls out of the thread and into the main loop
	Fix problem with "Next" item in playlist
	Fix problems with window_key_callback, as found by Diogo Franco
	Updated es translation by Festor
	Fix to allow video window to get small again after playlist visible and then hidden
	Fix another one of rwf's great dfu tests
	Make sure media_label doesn't disappear on close playlist
	Fix crasher when writing playlist to r/o area
	Fix lost playlistname when using it on CDs (this is the album name)
	More performance fixes, X usage dropped from 9% to 2% on my machine (1.6Ghz CPU)
	Performance fix, no need to update the metadata so much, only need to do it once per file
	Change to GUI layout, with controls and playlist, move playlist into a subpanel
	After loading the playlist, tell how many files are found
	Fix crash when you choose to shuffle a playlist when nothing selected in playlist
	Implement sorting of files on folder playlist load
	Implement 'Clear Playlist'
	Apply Audio and Subtitle Language tab under Edit->Preferences based on a patch from James Carthew
	Implement Edit->Switch Audio Track based on a patch from James Carthew
	When the playlist is visible there is a new icon (folder). Clicking this allows you to 
		Select a folder and all the media under that folder is added to the playlist, works recursivly
	Implement two requested GUI changes, fullscreen on double click and hotkey 'q' to quit
	Move aspect changes from main view menu to submenu named aspect under view
	Implement View->Show Subtitles