@@ -1931,6 +1931,7 @@ void config_apply(GtkWidget * widget, void *data)
     osdlevel = (gint) gtk_range_get_value(GTK_RANGE(config_osdlevel));
     softvol = (gint) gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(config_softvol));
     verbose = (gint) gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(config_verbose));
+    forcecache = (gboolean) gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(config_forcecache));
     if (oldosd != osdlevel) {
         cmd = g_strdup_printf("pausing_keep osd %i\n", osdlevel);
         send_command(cmd);
@@ -1946,6 +1947,7 @@ void config_apply(GtkWidget * widget, void *data)
     gconf_client_set_int(gconf, CACHE_SIZE, cache_size, NULL);
     gconf_client_set_int(gconf, OSDLEVEL, osdlevel, NULL);
     gconf_client_set_int(gconf, SOFTVOL, softvol, NULL);
+    gconf_client_set_bool(gconf, FORCECACHE, forcecache, NULL);
     gconf_client_set_int(gconf, VERBOSE, verbose, NULL);
     gconf_client_set_bool(gconf, DISABLE_QT, qt_disabled, NULL);
     gconf_client_set_bool(gconf, DISABLE_REAL, real_disabled, NULL);
@@ -2631,6 +2633,11 @@ void menuitem_config_callback(GtkMenuItem * menuitem, void *data)
     config_softvol = gtk_check_button_new_with_label(_("Mplayer Software Volume Control Enabled"));
     gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(config_softvol), softvol);
     gtk_table_attach_defaults(GTK_TABLE(conf_table), config_softvol, 0, 1, i, i + 1);
+    i++;
+
+	config_forcecache = gtk_check_button_new_with_label(_("Force the use of cache setting on streaming media"));
+    gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(config_forcecache), forcecache);
+    gtk_table_attach_defaults(GTK_TABLE(conf_table), config_forcecache, 0, 1, i, i + 1);
     i++;
 
     config_verbose = gtk_check_button_new_with_label(_("Verbose Debug Enabled"));
