@@ -69,7 +69,7 @@ static GOptionEntry entries[] = {
      NULL},
     {"cache", 0, 0, G_OPTION_ARG_INT, &cache_size, N_("Set cache size"),
      NULL},
-    {"forcecache", 0, 0, G_OPTION_ARG_NONE, &force_cache, N_("Force cache usage on streaming sites"),
+    {"forcecache", 0, 0, G_OPTION_ARG_NONE, &forcecache, N_("Force cache usage on streaming sites"),
      NULL},
     {"rpname", 0, 0, G_OPTION_ARG_STRING, &rpname, N_("Real Player Name"), "NAME"},
     {"rpconsole", 0, 0, G_OPTION_ARG_STRING, &rpconsole, N_("Real Player Console ID"), "CONSOLE"},
@@ -223,13 +223,14 @@ int main(int argc, char *argv[])
     window_width = -1;
     window_height = -1;
 	cache_size = 0;
-	force_cache = FALSE;
+	forcecache = FALSE;
 
     // call g_type_init or otherwise we can crash
     g_type_init();
     gconf = gconf_client_get_default();
     osdlevel = gconf_client_get_int(gconf, OSDLEVEL, NULL);
     softvol = gconf_client_get_int(gconf, SOFTVOL, NULL);
+    forcecache = gconf_client_get_bool(gconf, FORCECACHE, NULL);
     qt_disabled = gconf_client_get_bool(gconf, DISABLE_QT, NULL);
     real_disabled = gconf_client_get_bool(gconf, DISABLE_REAL, NULL);
     wmp_disabled = gconf_client_get_bool(gconf, DISABLE_WMP, NULL);
